# learning-rust-language

./: README.md
adder/: Cargo.toml
adder/tests/: lib.rs
api_client/: Cargo.toml
api_client/src/: main.rs
dining_philosophers/: Cargo.toml
dining_philosophers/src/: main.rs
embed/: .gitignore  Cargo.toml  embed.py
embed/src/: lib.rs
embedded-system/: .editorconfig  Cargo.toml  Dockerfile  openocd.cfg
embedded-system/src/: main.rs
embedded_system/: Cargo.toml  README.md
embedded_system/.cargo/: config
embedded_system_simulator/: Cargo.toml
embedded_system_simulator/src/: main.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
mandelbrot/www/: index.js  package-lock.json
notebook/: Cargo.toml
phrases/: Cargo.toml
phrases/src/: main.rs
rpn-calculator/: Cargo.toml
rpn-calculator/src/: main.rs
rpn_calc/: Cargo.toml
rpn_calc_no_error_handling/: Cargo.toml
samplecli/: Cargo.toml
samplecli/src/: main.rs
todo/: Cargo.toml  Dockerfile
todo/src/: main.rs
todo/templates/: index.html
