[package]
name = "todo"
version = "0.1.0"
authors = ["Asahi Takenouchi <le-soleil-levant.0802@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
thiserror = "1.0.20"
askama = "0.10.3"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
rusqlite = "0.24.0"
serde = "1.0.115"
